<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.OnlineShop.FullscreenContainer"
    tools:context=".signin.ui.SignInFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="151dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/black_600"
        android:textSize="26sp"
        app:fontFamily="@font/montserrat_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.example.core.presenter.BaseCustomTextInputLayout
        android:id="@+id/firstNameTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="43dp"
        app:boxBackgroundColor="@color/gray_200"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/gray_200"
        app:boxStrokeWidth="0dp"
        app:fontFamily="@font/montserrat_semibold"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home">

        <com.example.core.presenter.BaseCustomTextInputEditText
            android:id="@+id/firstNameSignInEditText"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:gravity="center"
            android:hint="@string/first_name"
            android:padding="0dp"
            android:textColorHint="@color/gray_400"
            android:textSize="11sp"
            app:fontFamily="@font/montserrat_medium"
            app:hintAnimationEnabled="false" />
    </com.example.core.presenter.BaseCustomTextInputLayout>

    <com.example.core.presenter.BaseCustomTextInputLayout
        android:id="@+id/lastNameTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="43dp"
        app:boxBackgroundColor="@color/gray_200"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/gray_200"
        app:boxStrokeWidth="0dp"
        app:fontFamily="@font/montserrat_semibold"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTextInputLayout">

        <com.example.core.presenter.BaseCustomTextInputEditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:gravity="center"
            android:hint="@string/last_name"
            android:padding="0dp"
            android:textColorHint="@color/gray_400"
            android:textSize="11sp"
            app:fontFamily="@font/montserrat_medium"
            app:hintAnimationEnabled="false" />
    </com.example.core.presenter.BaseCustomTextInputLayout>

    <com.example.core.presenter.BaseCustomTextInputLayout
        android:id="@+id/emailSignInTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="43dp"
        app:boxBackgroundColor="@color/gray_200"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/gray_200"
        app:boxStrokeWidth="0dp"
        app:fontFamily="@font/montserrat_semibold"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTextInputLayout">

        <com.example.core.presenter.BaseCustomTextInputEditText
            android:id="@+id/emailSignInEditText"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:gravity="center"
            android:hint="@string/email"
            android:padding="0dp"
            android:textColorHint="@color/gray_400"
            android:textSize="11sp"
            app:fontFamily="@font/montserrat_medium"
            app:hintAnimationEnabled="false" />
    </com.example.core.presenter.BaseCustomTextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="@color/purple_700"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white_200"
        android:textSize="14sp"
        app:cornerRadius="15dp"
        app:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSignInTextInputLayout" />

    <LinearLayout
        android:id="@+id/alreadyHaveAccountLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="left"
        android:layout_marginStart="42dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton">

        <TextView
            android:id="@+id/alreadyHaveAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/gray_500"
            android:textSize="10sp"
            app:fontFamily="@font/montserrat_medium" />

        <TextView
            android:id="@+id/logInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/log_in"
            android:textColor="@color/purple_900"
            android:textSize="10sp"
            app:fontFamily="@font/montserrat_medium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signInGoogleLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="43dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alreadyHaveAccountLinearLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/ic_google_24" />

        <TextView
            android:id="@+id/signInGoogleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/sign_in_with_google"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:fontFamily="@font/montserrat_medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signInAppleLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="43dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInGoogleLinearLayout"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/ic_apple_24" />

        <TextView
            android:id="@+id/signInAppleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/sign_in_with_apple"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:fontFamily="@font/montserrat_medium" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>